test/files/neg/t5440.check
t5440.scala:3: error: match may not be exhaustive.
It would fail on the following inputs: (List(_), Nil), (Nil, List(_))
    (list1, list2) match {
    ^
one error found
